Removed sizing from canvas element to prevent distorted render. #1

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -20,6 +20,4 @@
 #my-canvas {
   border: 2px solid dimgrey;
   background-color: white;
-  width: 600px;
-  height: 600px;
 }
